--- a/index.html
+++ b/index.html
@@ -2,29 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>My HTML Learning Page</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kanit|Noto+Sans+TC|Russo+One|Source+Code+Pro&display=swap" rel="stylesheet">
 
   </head>
   <body>
-      <h1>Mozilla is cool</h1>
-        <img src="images/mozilla.jpg" alt="My test image">
-        <p>At Mozilla, we’re a global community of</p>
-        <p id="my-id">At Mozilla, we’re a global community of</p>
-        <p class="my-class">At Mozilla, we’re a global community of</p>
-
-      <ul> 
-        <li>technologists</li>
-        <li>thinkers</li>
-        <li>builders</li>
-      </ul>
-        <p>Working together to keep the internet alive Working together to keep the internet alive Working together to keep the internet alive Working together to keep the internet alive Working together to keep the internet alive Working together to keep the internet alive
-        </p>
-        <p>Read the <a href="https://www.mozilla.org/zh-TW/about/manifesto/">Mozilla Manifesto</a> to learn even more
-        </p>
-      <button>Change user</button>
-      <script src="scripts/main.js"></script>
-      
+      <h1>HTML 再學習</h1>
+        <p>嘗試在Google試算表上直接顯示證交所的股價資訊，發現事隔近20年，連JavaScript也進展不少，興起了再學習的念頭‧</p>
+        <p>我了解前端的網頁免費試用是沒問題的，後端資料庫的支援大概還須付費的才能有所發揮‧</p>
+        <p>先試試github吧，<a href="FirstLesson.html" title="My First Lesson" target="_blank">這是第一個測試頁</a></p>
+      <script src="scripts/main.js"></script>  
   </body>
 </html>
