--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 
   </head>
   <body>
-      <h1>HTML 再學習</h1>
+      <h2>HTML 再學習</h2>
         <p>嘗試在Google試算表上直接顯示證交所的股價資訊，發現事隔近20年，連JavaScript也進展不少，興起了再學習的念頭‧</p>
         <p>我了解前端的網頁免費試用是沒問題的，後端資料庫的支援大概還須付費的才能有所發揮‧</p>
         <p>我的網址就是：<a href="http://fangshuh.github.io" title="My HOME Page" target="_blank">http://fangshuh.github.io</a></p>
         <p>先試試github吧，<a href="FirstLesson.html" title="My First Lesson" target="_blank">這是第一個測試頁</a></p>
-<!--      <script src="scripts/main.js"></script>  
--->
+      <script src="scripts/main.js"></script>  
   </body>
 </html>
