--- a/FirstLesson.html
+++ b/FirstLesson.html
@@ -11,8 +11,8 @@
       <h1>Mozilla is cool</h1>
         <img src="images/mozilla.jpg" alt="My test image">
         <p>At Mozilla, we’re a global community of</p>
-        <p id="my-id">At Mozilla, we’re a global community of</p>
-        <p class="my-class">At Mozilla, we’re a global community of</p>
+        <p id="my-id">At Mozilla, we’re a global community of (CSS #my-id)</p>
+        <p class="my-class">At Mozilla, we’re a global community of (CSS .my-class)</p>
 
       <ul> 
         <li>technologists</li>
@@ -24,7 +24,7 @@
         <p>Read the <a href="https://www.mozilla.org/zh-TW/about/manifesto/">Mozilla Manifesto</a> to learn even more
         </p>
       <button>Change user</button>
-      <script src="scripts/main.js"></script>
+      <script src="scripts/lesson1.js"></script>
       
   </body>
 </html>
