--- a/FirstLesson.html
+++ b/FirstLesson.html
@@ -24,7 +24,7 @@
         <p>Read the <a href="https://www.mozilla.org/zh-TW/about/manifesto/">Mozilla Manifesto</a> to learn even more
         </p>
       <button>Change user</button>
-<!--      <script src="scripts/lesson1.js"></script>
--->      
+      <script src="scripts/lesson1.js"></script>
+      
   </body>
 </html>
